fix overlapping on mobile

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,7 +1,7 @@
-.projects {
-    height: 100vh;
-}
+
 
 .projectContainer {
     background-color:palegreen;
+    align-items: center;
+
 }
