--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -8,13 +8,14 @@
     display:flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding:10%
+    padding:10%;
+    border: 3px solid green;
+
 }
 
 .Skills {
-    height: 100vh;
     text-align: center;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 
 .skill-icons {
